/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package settings;
option java_package = "bisq.settings.protobuf";
option java_multiple_files = true;
import "common.proto";

enum CookieKey {
  STAGE_X = 0;
  STAGE_Y = 1;
  STAGE_W = 2;
  STAGE_H = 3;
  NAVIGATION_TARGET = 4;
}
message CookieMapEntry {
  CookieKey cookieKey = 1;
  string value = 2;
}
message Cookie {
  repeated CookieMapEntry cookieMapEntries = 1;
}

message DisplaySettings {
  bool useAnimations = 1;
}
message SettingsStore {
  Cookie cookie = 1;
  DisplaySettings displaySettings = 2;
  map<string, bool> dontShowAgainMap = 3;
  repeated common.Market markets = 4;
  common.Market selectedMarket = 5;
}